# ZeldaClone_NES

./: .gitignore  CMakeLists.txt  GenerateSolution.bat  README.md  ZeldaClone.sln  premake5.lua
ZeldaClone/: CMakeLists.txt  ZeldaClone.rc  ZeldaClone.vcxproj  ZeldaClone.vcxproj.filters  imgui.ini  resource.h
ZeldaClone/Assets/Backgrounds/: Jojo.lua  aly.lua  enemies.lua  test.lua  testes
ZeldaClone/Assets/EditorFiles/: Darknut.lua  Leever.lua  Moblin.lua  Octorok.lua
ZeldaClone/Assets/LevelAssets/: Level1.txt  hudBox.txt  hudBoxPause.txt  menuBox.txt  menuFiles1.txt  menuFiles2.txt  menuFiles3.txt  pauseMenu.txt
ZeldaClone/Assets/Levels/: StateMachine.lua  Test_Colliders.map  colliders.map  delete.map  enemies.lua  foo.lua  level_1_trigger_test.lua  newLua.lua  overworld.map  overworldLevel.lua  overworld_colliders_1.map  overworld_enemies.lua  overworld_triggers.lua  secret_dungeon_colliders.map  shop_1.lua  shop_1_colliders.map  shop_1_triggers.lua  sword_cave.lua  sword_cave_triggers.lua  testState.lua  triggers.map
ZeldaClone/Assets/LuaFiles/: ProjectileAttributes.lua  editor_assets.lua  game_state_assets.lua  hud.lua  menu_state_assets.lua  menu_state_load.lua  new_player_create.lua
ZeldaClone/Assets/SavedFiles/: GameSecrets.lua  GameSecrets_1.lua  save1.lua  save2.lua  save3.lua  slot1.txt  slot2.txt  slot3.txt
ZeldaClone/Assets/Tilemaps/: AnotherTest.lua  Dustininin.lua  EnemyTest.lua  NewMap.lua  NewTestTiles.map  TestTrigger.lua  TheNewTrigger.lua  practice.lua
ZeldaClone/assets/EditorFiles/: Leever.lua  Moblin.lua  Octorok.lua
ZeldaClone/assets/LuaFiles/: editor_assets.lua  game_state_assets.lua  menu_state_assets.lua  new_player_create.lua
ZeldaClone/include/AssetManager/: AssetManager.h
ZeldaClone/include/Components/: AIComponent.h  AnimationComponent.h  BackgroundImageComponent.h  BoxColliderComponent.h  CameraComponent.h  CaptionComponent.h  ColliderComponent.h  EditorComponent.h  EnemyComponent.h  GameComponent.h  GamePadComponent.h  HUDComponent.h  HealthComponent.h  ItemComponent.h  KeyboardControlComponent.h  MenuComponent.h  PauseComponent.h  PlayerComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RegisterNameComponent.h  RigidBodyComponent.h  RupeeGameComponent.h  SaveComponent.h  SceneChangeComponent.h  SecretComponent.h  SettingsComponent.h  SpriteComponent.h  TextLabelComponent.h  TileComponent.h  TransformComponent.h  TriggerBoxComponent.h
ZeldaClone/include/ECS/: ECS.h
ZeldaClone/include/Editor/: EditorFileLoader.h
ZeldaClone/include/Events/: CollisionEvent.h  Event.h  EventManager.h  GamePadButtonPressedEvent.h  KeyPressedEvent.h  TriggerEvent.h
ZeldaClone/include/Game/: Game.h  LevelLoader.h  Player.h
ZeldaClone/include/Logger/: Logger.h
ZeldaClone/include/StateMachines/: BossStates.h  NewEnemyStates.h  NewPlayerStates.h  NewState.h  NewStateMachine.h  UpdateEnemies.h
ZeldaClone/include/States/: EditorState.h  GameOverState.h  GameState.h  GameStateMachine.h  MenuState.h  NameState.h  PauseState.h  SaveGameState.h  SettingsState.h  State.h  TitleState.h
ZeldaClone/include/Systems/: CameraMovementSystem.h  MusicPlayerSystem.h  RenderCollisionSystem.h  RenderTextSystem.h  RenderTitleSystem.h  SoundFXSystem.h
ZeldaClone/include/Utilities/: Camera.h  FileManagerUtils.h  GameData.h  LuaTableWriter.h  RNG.h  Timer.h  Utility.h
ZeldaClone/include/inputs/: Button.h  Gamepad.h  InputManager.h  Keyboard.h  Keys.h
ZeldaClone/libs/lua/: lua53.lib
ZeldaClone/libs/sol/: sol.hpp
ZeldaClone/src/: main.cpp
ZeldaClone/src/AssetManager/: AssetManager.cpp  AssetManager.h
ZeldaClone/src/Buttons/: MenuButtonSystem.h
ZeldaClone/src/Components/: AIComponent.cpp  AIComponent.h  AnimationComponent.h  BackgroundImageComponent.h  BoxColliderComponent.h  CameraComponent.h  CameraFollowComponent.h  CaptionComponent.h  ColliderComponent.h  EditorComponent.h  EnemyComponent.h  GameComponent.h  GamePadComponent.h  HUDComponent.h  HealthComponent.h  ItemComponent.h  KeyboardControlComponent.h  MenuComponent.h  PauseComponent.h  PlayerComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RegisterNameComponent.h  RigidBodyComponent.h  RupeeGameComponent.h  RupeeTypeComponent.h  SaveComponent.h  SceneChangeComponent.h  ScriptComponent.h  SecretComponent.h  SettingsComponent.h  SoundComponent.h  SpriteComponent.h  TextLabelComponent.h  TileComponent.h  TransformComponent.h  TriggerBoxComponent.h
ZeldaClone/src/ECS/: ECS.cpp  ECS.h
ZeldaClone/src/Editor/: EditorFileLoader.cpp  EditorFileLoader.h
ZeldaClone/src/EntityStates/: AttackState.cpp  AttackState.h  EntityStateMachine.cpp  EntityStateMachine.h  EntityStates.h
ZeldaClone/src/Events/: CollisionEvent.h  Event.h  EventManager.h  GamePadButtonPressedEvent.h  KeyPressedEvent.h  TriggerEvent.h
ZeldaClone/src/Game/: Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h  Player.cpp  Player.h
ZeldaClone/src/Logger/: Logger.cpp  Logger.h
ZeldaClone/src/StateMachines/: BossStates.cpp  BossStates.h  EnemyStateMachine.cpp  EnemyStateMachine.h  EnemyStates.cpp  EnemyStates.h  NewEnemyStates.cpp  NewEnemyStates.h  NewPlayerStates.cpp  NewPlayerStates.h  NewState.h  NewStateMachine.cpp  NewStateMachine.h  PlayerStateMachine.cpp  PlayerStateMachine.h  PlayerStates.cpp  PlayerStates.h  TState.h  TStateMachine.h  UpdateEnemies.cpp  UpdateEnemies.h
ZeldaClone/src/States/: DungeonState.cpp  DungeonState.h  EditorState.cpp  EditorState.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  GameStateMachine.cpp  GameStateMachine.h  MenuState.cpp  MenuState.h  NameState.cpp  NameState.h  PauseState.cpp  PauseState.h  SaveGameState.cpp  SaveGameState.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h  TitleState.cpp  TitleState.h
ZeldaClone/src/Systems/: AttackSystem.h  CameraMovementSystem.cpp  CameraMovementSystem.h  MusicPlayerSystem.cpp  MusicPlayerSystem.h  RemoveEntitySystem.h  RenderCollisionSystem.cpp  RenderCollisionSystem.h  RenderTextSystem.cpp  RenderTextSystem.h  RenderTitleSystem.cpp  RenderTitleSystem.h  SoundFXSystem.cpp  (+2 more)
(+168 files in other folders)
