add_executable(ZELDA_CLONE
	"include/AssetManager/AssetManager.h"
	"src/AssetManager/AssetManager.cpp"
	
	"include/Components/AIComponent.h"
	"include/Components/AnimationComponent.h"
	"include/Components/BackgroundImageComponent.h"
	"include/Components/BoxColliderComponent.h"
	"include/Components/CameraComponent.h"
	"include/Components/CameraFollowComponent.h"
	"include/Components/CaptionComponent.h"
	"include/Components/ColliderComponent.h"
	"include/Components/EditorComponent.h"
	"include/Components/EnemyComponent.h"
	"include/Components/GameComponent.h"
	"include/Components/GamePadComponent.h"
	"include/Components/HealthComponent.h"
	"include/Components/HUDComponent.h"
	"include/Components/ItemComponent.h"
	"include/Components/KeyboardControlComponent.h"
	"include/Components/MenuComponent.h"
	"include/Components/PauseComponent.h"
	"include/Components/PlayerComponent.h"
	"include/Components/ProjectileEmitterComponent.h"
	"include/Components/RegisterNameComponent.h"
	"include/Components/RigidBodyComponent.h"
	"include/Components/RupeeGameComponent.h"
	"include/Components/SaveComponent.h"
	"include/Components/SceneChangeComponent.h"
	"include/Components/ScriptComponent.h"
	"include/Components/SecretComponent.h"
	"include/Components/SettingsComponent.h"
	"include/Components/SoundComponent.h"
	"include/Components/SpriteComponent.h"
	"include/Components/TextLabelComponent.h"
	"include/Components/TileComponent.h"
	"include/Components/TransformComponent.h"
	"include/Components/TriggerBoxComponent.h"
	
	"include/ECS/ECS.h"
	"src/ECS/ECS.cpp"
	
	"include/Editor/EditorFileLoader.h"
	"src/Editor/EditorFileLoader.cpp"
	
	"include/Events/CollisionEvent.h"
	"include/Events/Event.h"
	"include/Events/EventManager.h"
	"include/Events/GamePadButtonPressedEvent.h"
	"include/Events/KeyPressedEvent.h"
	"include/Events/TriggerEvent.h"
	
	"include/Game/Game.h"
	"src/Game/Game.cpp"
	"include/Game/LevelLoader.h"
	"src/Game/LevelLoader.cpp"
	"include/Game/Player.h"
	"src/Game/Player.cpp"
	
	"include/inputs/Button.h"
	"src/inputs/Button.cpp"
	"include/inputs/Gamepad.h"
	"src/inputs/Gamepad.cpp"
	"include/inputs/GPButtons.h"
	"include/inputs/InputManager.h"
	"src/inputs/InputManager.cpp"
	"include/inputs/Keyboard.h"
	"src/inputs/Keyboard.cpp"
	
	"include/Logger/Logger.h"
	"src/Logger/Logger.cpp"
	
	"include/StateMachines/BossStates.h"
	"src/StateMachines/BossStates.cpp"
	"include/StateMachines/NewEnemyStates.h"
	"src/StateMachines/NewEnemyStates.cpp"
	"include/StateMachines/NewPlayerStates.h"
	"src/StateMachines/NewPlayerStates.cpp"
	"include/StateMachines/NewState.h"
	"include/StateMachines/NewStateMachine.h"
	"src/StateMachines/NewStateMachine.cpp"
	"include/StateMachines/UpdateEnemies.h"
	"src/StateMachines/UpdateEnemies.cpp"
	
	"include/States/EditorState.h"
	"src/States/EditorState.cpp"
	"include/States/GameOverState.h"
	"src/States/GameOverState.cpp"
	"include/States/GameState.h"
	"src/States/GameState.cpp"
	"include/States/GameStateMachine.h"
	"src/States/GameStateMachine.cpp"
	"include/States/MenuState.h"
	"src/States/MenuState.cpp"
	"include/States/NameState.h"
	"src/States/NameState.cpp"
	"include/States/PauseState.h"
	"src/States/PauseState.cpp"
	"include/States/SaveGameState.h"
	"src/States/SaveGameState.cpp"
	"include/States/SettingsState.h"
	"src/States/SettingsState.cpp"
	"include/States/State.h"
	"include/States/TitleState.h"
	"src/States/TitleState.cpp"
	
	"include/Systems/EditorSystems/MouseControlSystem.h"
	"src/Systems/EditorSystems/MouseControlSystem.cpp"
	"include/Systems/EditorSystems/RenderEditorGUISystem.h"
	"src/Systems/EditorSystems/RenderEditorGUISystem.cpp"
	"include/Systems/EditorSystems/RenderEditorSystem.h"
	"src/Systems/EditorSystems/RenderEditorSystem.cpp"
	"include/Systems/GameSystems/AISystem.h"
	"src/Systems/GameSystems/AISystem.cpp"
	"include/Systems/GameSystems/AnimationSystem.h"
	"src/Systems/GameSystems/AnimationSystem.cpp"
	"include/Systems/GameSystems/CaptionSystem.h"
	"src/Systems/GameSystems/CaptionSystem.cpp"
	"include/Systems/GameSystems/CollectItemSystem.h"
	"src/Systems/GameSystems/CollectItemSystem.cpp"
	"include/Systems/GameSystems/CollisionSystem.h"
	"src/Systems/GameSystems/CollisionSystem.cpp"
	"include/Systems/GameSystems/DamageSystem.h"
	"src/Systems/GameSystems/DamageSystem.cpp"
	"include/Systems/GameSystems/HealthSystem.h"
	"src/Systems/GameSystems/HealthSystem.cpp"
	"include/Systems/GameSystems/MovementSystem.h"
	"src/Systems/GameSystems/MovementSystem.cpp"
	"include/Systems/GameSystems/ProjectileEmitterSystem.h"
	"src/Systems/GameSystems/ProjectileEmitterSystem.cpp"
	"include/Systems/GameSystems/ProjectileLifeCycleSystem.h"
	"src/Systems/GameSystems/ProjectileLifeCycleSystem.cpp"
	"include/Systems/GameSystems/RenderGameOverSystem.h"
	"src/Systems/GameSystems/RenderGameOverSystem.cpp"
	"include/Systems/GameSystems/RenderGameOverTextSystem.h"
	"include/Systems/GameSystems/RenderHealthSystem.h"
	"src/Systems/GameSystems/RenderHealthSystem.cpp"
	"include/Systems/GameSystems/RenderHUDSystem.h"
	"src/Systems/GameSystems/RenderHUDSystem.cpp"
	"include/Systems/GameSystems/RenderSystem.h"
	"src/Systems/GameSystems/RenderSystem.cpp"
	"include/Systems/GameSystems/RenderTileSystem.h"
	"src/Systems/GameSystems/RenderTileSystem.cpp"
	"include/Systems/GameSystems/TriggerSystem.h"
	"src/Systems/GameSystems/TriggerSystem.cpp"
	"include/Systems/MenuSystems/RenderMainMenuSystem.h"
	"src/Systems/MenuSystems/RenderMainMenuSystem.cpp"
	"include/Systems/NameSystems/RenderNameStateTextSystem.h"
	"src/Systems/NameSystems/RenderNameStateTextSystem.cpp"
	"include/Systems/NameSystems/RenderNameSystem.h"
	"src/Systems/NameSystems/RenderNameSystem.cpp"
	"include/Systems/PauseSystems/RenderPauseSystem.h"
	"src/Systems/PauseSystems/RenderPauseSystem.cpp"
	"include/Systems/PauseSystems/RenderSaveStateSystem.h"
	"src/Systems/PauseSystems/RenderSaveStateSystem.cpp"
	"include/Systems/CameraMovementSystem.h"
	"src/Systems/CameraMovementSystem.cpp"
	"include/Systems/MusicPlayerSystem.h"
	"src/Systems/MusicPlayerSystem.cpp"
	"include/Systems/RenderCollisionSystem.h"
	"src/Systems/RenderCollisionSystem.cpp"
	"include/Systems/RenderTextSystem.h"
	"src/Systems/RenderTextSystem.cpp"
	"include/Systems/RenderTitleSystem.h"
	"src/Systems/RenderTitleSystem.cpp"
	"include/Systems/SoundFXSystem.h"
	"src/Systems/SoundFXSystem.cpp"
	
	"include/Utilities/Camera.h"
	"src/Utilities/Camera.cpp"
	"include/Utilities/FileManagerUtils.h"
	"src/Utilities/FileManagerUtils.cpp"
	"include/Utilities/GameData.h"
	"src/Utilities/GameData.cpp"
	"include/Utilities/LuaTableWriter.h"
	"src/Utilities/LuaTableWriter.cpp"
	"include/Utilities/RNG.h"
	"src/Utilities/RNG.cpp"
	"include/Utilities/Timer.h"
	"src/Utilities/Timer.cpp"
	"include/Utilities/Utility.h"
	"src/Utilities/Utility.cpp"
	
	"src/main.cpp"
)

target_include_directories(
    ZELDA_CLONE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
	
target_link_libraries(
	ZELDA_CLONE PRIVATE imgui SDL2::SDL2 
	$<IF:$<TARGET_EXISTS:SDL2_mixer::SDL2_mixer>,SDL2_mixer::SDL2_mixer,SDL2_mixer::SDL2_mixer-static> 
	$<IF:$<TARGET_EXISTS:SDL2_ttf::SDL2_ttf>,SDL2_ttf::SDL2_ttf,SDL2_ttf::SDL2_ttf-static> 
	$<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>)
	
target_link_libraries(ZELDA_CLONE PUBLIC sol2 glm::glm)

add_resources(TARGET Assets IN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/assets OUT_DIR assets)
add_dependencies(ZELDA_CLONE Copy-Assets)

set_target_properties(ZELDA_CLONE PROPERTIES
    VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/")